chore: 修改菜单样式

--- a/src/app/shared/components/contextmenu/contextmenu.component.html
+++ b/src/app/shared/components/contextmenu/contextmenu.component.html
@@ -9,14 +9,16 @@
 >
   <div class="contextmenu" [@zoom]="'active'">
     <div class="popover">
-      <div>
-        <div class="placement"></div>
-        <div class="tooltip-content">
-          <ul [@zoom]="'active'">
-            <li>保存并覆盖</li>
-            <li>导出到新文件夹</li>
-          </ul>
-        </div>
+      <div class="placement"></div>
+      <div class="tooltip-content">
+        <ul [@zoom]="'active'">
+          <li>查看/修改</li>
+          <li>打开文件</li>
+          <li>保存并覆盖</li>
+          <li>另存为...</li>
+          <hr color="#cfcfcf" />
+          <li>删除</li>
+        </ul>
       </div>
     </div>
   </div>
