chore: 优化右键菜单

--- a/src/app/shared/components/contextmenu/contextmenu.component.html
+++ b/src/app/shared/components/contextmenu/contextmenu.component.html
@@ -16,8 +16,7 @@
           <li>打开文件</li>
           <li>保存并覆盖</li>
           <li>另存为...</li>
-          <hr color="#cfcfcf" />
-          <li>删除</li>
+          <!-- <li class="delete">删除</li> -->
         </ul>
       </div>
     </div>
