--- a/src/app/shared/components/contextmenu/contextmenu.component.less
+++ b/src/app/shared/components/contextmenu/contextmenu.component.less
@@ -51,8 +51,8 @@
             border-bottom: none;
           }
         }
-        hr{
-          .lh(1);
+        .delete{
+          border-top: 1px solid #cfcfcf;
         }
       }
     }
