--- a/src/app/shared/components/contextmenu/contextmenu.component.less
+++ b/src/app/shared/components/contextmenu/contextmenu.component.less
@@ -4,9 +4,7 @@
   z-index: 1000;
 
   .popover {
-    cursor: pointer;
     padding-left: 10px;
-
     .placement {
       border-top-color: transparent;
       border-right-color: transparent;
@@ -34,10 +32,10 @@
       box-shadow: 0 3px 6px -4px rgba(0, 0, 0, 0.12),
         0 6px 16px 0 rgba(0, 0, 0, 0.08),
         0 9px 28px 8px rgba(0, 0, 0, 0.05);
-       .t-c;
        background-color: #fff;
       ul{
         .mb(0);
+        width: 150px;
         font-size: 12px;
         li {
           padding:0 16px;
@@ -51,7 +49,10 @@
             border-bottom: none;
           }
         }
-        .delete{
+        hr {
+          height: 0;
+          border: none;
+          margin: 5px;
           border-top: 1px solid #cfcfcf;
         }
       }
