feat: 新增导出 另存为 完成提示以及功能

--- a/src/app/shared/components/contextmenu/contextmenu.component.html
+++ b/src/app/shared/components/contextmenu/contextmenu.component.html
@@ -16,7 +16,7 @@
             (click)="menuListClick('viewImg')"
             >{{'viewImg'| translate}}</li> -->
           <li (click)="menuListClick('openFileDir')">{{ 'openFileDir' | translate }}</li>
-          <li (click)="menuListClick('savenewdir')">{{ 'savenewdir' | translate }}</li>
+          <li (click)="menuListClick('saveAs')">{{ 'saveAs' | translate }}</li>
           <hr />
           <li (click)="menuListClick('remove')" class="delete">{{ 'remove' | translate }}</li>
         </ul>
