--- a/src/styles.less
+++ b/src/styles.less
@@ -12,6 +12,8 @@
 @import "~ng-zorro-antd/drawer/style/entry.less";
 @import "~ng-zorro-antd/spin/style/entry.less";
 @import "~ng-zorro-antd/modal/style/entry.less";
+@import "~ng-zorro-antd/message/style/entry.less";
+
 html,
 body {
   margin: 0;
