--- a/src/app/shared/components/img-list/img-list.component.less
+++ b/src/app/shared/components/img-list/img-list.component.less
@@ -48,7 +48,32 @@
       display: flex;
       justify-content: center;
       align-items: center;
-
+      .title{
+        position: absolute;
+        .l(0);
+        .r(0);
+        .t(0);
+        .p(0 10px);
+        font-size: 16px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+        .h(40px);
+        .imgicon {
+          font-size: 20px;
+        }
+        .name{
+          flex:1;
+          white-space: nowrap;
+          overflow:hidden;
+          text-overflow: ellipsis;
+          margin: 0 10px;
+        }
+      }
+      .title:not(.disabled) .menu {
+        cursor: pointer;
+      }
       img {
         .border-tl-tr;
         display: block;
