--- a/src/styles.less
+++ b/src/styles.less
@@ -13,6 +13,7 @@
 @import "~ng-zorro-antd/spin/style/entry.less";
 @import "~ng-zorro-antd/modal/style/entry.less";
 @import "~ng-zorro-antd/message/style/entry.less";
+@import "~ng-zorro-antd/popover/style/entry.less";
 
 html,
 body {
@@ -67,4 +68,10 @@ body {
 
 .ant-modal-confirm-body .ant-modal-confirm-content {
   user-select: text;
+}
+.disabled {
+  color: rgba(0, 0, 0, 0.25) !important;
+}
+svg.disabled {
+  cursor: not-allowed !important;
 }
