--- a/src/app/shared/components/img-list/img-list.component.less
+++ b/src/app/shared/components/img-list/img-list.component.less
@@ -30,6 +30,15 @@
 
     &:hover {
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+      .img {
+        .title{
+            .bg(#fff);
+            box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+            .name {
+              opacity: 1;
+            }
+        }
+      }
     }
 
     &.hidden {
@@ -48,6 +57,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      cursor: pointer;
       .title{
         position: absolute;
         .l(0);
@@ -58,22 +68,27 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+        border-radius: @border-width @border-width 0 0;
+        transition: all 0.2s;
         .h(40px);
         .imgicon {
           font-size: 20px;
         }
         .name{
+          .t-c;
           flex:1;
           white-space: nowrap;
           overflow:hidden;
           text-overflow: ellipsis;
           margin: 0 10px;
+          opacity: 0;
+          transition: opacity 0.2s;
         }
       }
       .title:not(.disabled) .menu {
         cursor: pointer;
       }
+      
       img {
         .border-tl-tr;
         display: block;
@@ -88,7 +103,7 @@
         .l(0);
         max-width: @img-w;
         max-height: @img-w;
-        border-radius: 8px 8px 0 0;
+        border-radius: @border-width @border-width 0 0;
       }
 
       .spin_visi {
