fix: 修复被压缩的图片和loading可以拖拽问题

--- a/src/app/shared/components/img-list/img-list.component.less
+++ b/src/app/shared/components/img-list/img-list.component.less
@@ -95,6 +95,8 @@
         max-width: @img-maxw;
         max-height: @img-maxw;
         cursor: pointer;
+        pointer-events: none;
+        user-select: none;
       }
 
       .spin {
