chore: 删除样式 优化逻辑

--- a/src/app/shared/components/compare/compare.component.html
+++ b/src/app/shared/components/compare/compare.component.html
@@ -28,6 +28,7 @@
 
   <div class="img_continer">
     <div class="left">
+      <span>Compress Before</span>
       <figure
         #left
         [style.--postionX--.px]="leftdragPosition.x"
@@ -48,6 +49,7 @@
     </div>
     <div class="hr"></div>
     <div class="right">
+      <span>Compress After</span>
       <figure
         [style.--postionX--.px]="rightdragPosition.x"
         [style.--postionY--.px]="rightdragPosition.y"
