--- a/src/app/shared/components/compare/compare.component.less
+++ b/src/app/shared/components/compare/compare.component.less
@@ -81,8 +81,9 @@
           transform: rotate(var(--rotate--));
           transition: transform 0.1s;
           img {
-            width: 230px;
-            height: auto;
+            max-width: 230px;
+            max-height: 230px;
+            // height: auto;
             transition: transform 0.1s;
             cursor: all-scroll;
           }
