style: Adjust the code structure

--- a/src/renderer/app/home/home.component.html
+++ b/src/renderer/app/home/home.component.html
@@ -58,9 +58,9 @@
     (drop)="fileAdd($event)"
   >
     <app-img-list></app-img-list>
-    <div [class.hidden]="true || filesLength" class="text">
+    <!-- <div [class.hidden]="filesLength" class="text">
       <span class="text-big">拖拽文件到此区域</span>
-    </div>
+    </div> -->
   </div>
 </div>
 
