--- a/src/renderer/app/shared/components/img-list/img-list.component.less
+++ b/src/renderer/app/shared/components/img-list/img-list.component.less
@@ -96,7 +96,15 @@ img {
           transition: opacity 0.2s;
         }
       }
-
+      .error{
+        .pt(40px);
+        .c(red);
+        h1{
+          .ft(30);
+          .c(red);
+        }
+        user-select: text;
+      }
       .img {
         .border-tl-tr;
         .w(@img-w);
