--- a/src/renderer/app/shared/components/img-list/img-list.component.less
+++ b/src/renderer/app/shared/components/img-list/img-list.component.less
@@ -80,7 +80,10 @@ img {
         &:not(.disabled) .menu {
           cursor: pointer;
         }
-
+        .remove {
+          cursor: pointer;
+          color: #333;
+        }
         .imgicon {
           font-size: 20px;
         }
