feat: feat  img list drag to the desktop

--- a/src/renderer/app/shared/components/img-list/img-list.component.html
+++ b/src/renderer/app/shared/components/img-list/img-list.component.html
@@ -32,7 +32,14 @@
         <h1>Image compression failed</h1>
         <span>{{ item.errorInfo }}</span>
       </div>
-      <div *ngIf="item.state === 'finish'" class="img" appCompare [appCompareData]="item">
+      <div
+        *ngIf="item.state === 'finish'"
+        class="img"
+        appCompare
+        [appCompareData]="item"
+        draggable="true"
+        (dragstart)="dragstart($event, item.outpath, item.path)"
+      >
         <img [src]="item.outsrc" />
       </div>
     </div>
