--- a/src/renderer/app/shared/components/img-list/img-list.component.html
+++ b/src/renderer/app/shared/components/img-list/img-list.component.html
@@ -38,7 +38,7 @@
         appCompare
         [appCompareData]="item"
         draggable="true"
-        (dragstart)="dragstart($event, item.outpath, item.path)"
+        (dragstart)="dragstart($event, item.outpath)"
       >
         <img [src]="item.outsrc" />
       </div>
