fix: fix  img error bug

--- a/src/renderer/app/shared/components/compare/compare.component.less
+++ b/src/renderer/app/shared/components/compare/compare.component.less
@@ -102,7 +102,7 @@
   .bg(#fff);
 }
 .transparent {
-  background: url('/assets/transparent.webp');
+  background: url('./img/transparent.webp');
 }
 .red {
   .bg(#ff0000);
