chore: change less

--- a/src/renderer/app/shared/components/img-list/img-list.component.less
+++ b/src/renderer/app/shared/components/img-list/img-list.component.less
@@ -101,7 +101,7 @@ img {
         .pt(40px);
         .c(red);
         h1{
-          .ft(30);
+          .ft(30px);
           .c(red);
         }
         user-select: text;
