chore: reset ul li  default style

--- a/src/renderer/styles.less
+++ b/src/renderer/styles.less
@@ -73,3 +73,13 @@ body {
 svg.disabled {
   cursor: not-allowed !important;
 }
+
+
+ul{
+  padding: 0;
+  list-style: none;
+}
+::-webkit-scrollbar {
+  width: 1px !important;
+  display: none !important;
+}
